Fix (overflow): homepage

--- a/src/scss/elements/_elements.page.scss
+++ b/src/scss/elements/_elements.page.scss
@@ -21,7 +21,7 @@ html {
   font-size: 62.5%;
   font-weight: $global-font-regular;
   line-height: 1.6;
-  overflow-y: scroll; /* [2] */
+  // overflow-y: scroll; /* [2] */
   overflow-x: hidden;
   min-height: 100%; /* [3] */
 }
@@ -29,6 +29,7 @@ html {
 body {
   font-size: 1.6rem;
   padding-bottom: 52px;
+  overflow-x: hidden;
 
   @include mq($from: tablet) {
     padding-bottom: 0;
